@@ -2129,10 +2129,13 @@ class _ColumnEntity(_QueryEntity):
         self.froms.add(from_obj)
 
     def corresponds_to(self, entity):
-        if _is_aliased_class(entity):
+        if self.entity_zero is None:
+            return False
+        elif _is_aliased_class(entity):
             return entity is self.entity_zero
         else:
-            return not _is_aliased_class(self.entity_zero) and entity.base_mapper.common_parent(self.entity_zero)
+            return not _is_aliased_class(self.entity_zero) and \
+                    entity.base_mapper.common_parent(self.entity_zero)
 
     def _resolve_expr_against_query_aliases(self, query, expr, context):
         return query._adapt_clause(expr, False, True)
